--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "./build/index.js",
   "types": "./build/index.ts",
   "files": [
-    "./build/**/*"
+    "/build/**/*"
   ],
   "scripts": {
     "clean": "del-cli ./build/*",
     "build": "npm run clean && tsc",
-    "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish --access public"
+    "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
   },
   "author": "",
   "license": "ISC",
