--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.8",
   "description": "",
   "main": "./build/index.js",
-  "types": "./build/index.ts",
+  "types": "./build/index.d.ts",
   "files": [
     "/build/**/*"
   ],
